[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.83.0"

[workspace.dependencies]
wyw_macros = { version = "0.1.0", path = "crates/wyw_macros" }
wyw_processor = { version = "0.1.0", path = "crates/wyw_processor" }
wyw_traverse = { version = "0.1.0", path = "crates/wyw_traverse" }

napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-build = "2.0.1"
napi-derive = "2.12.2"
oxc = "0.38.0"
oxc_resolver = { version = "2.1.1", features = ["package_json_raw_json_api", "pnp", "yarn_pnp"] }
oxc_semantic = "0.38.0"
