[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
rust-version = "1.83.0"

[workspace.dependencies]
wyw_macros = { version = "0.1.0", path = "crates/wyw_macros" }
wyw_processor = { version = "0.1.0", path = "crates/wyw_processor" }
wyw_shaker = { version = "0.1.0", path = "crates/wyw_shaker" }
wyw_traverse = { version = "0.1.0", path = "crates/wyw_traverse" }

cargo-insta = "1.41.1"
glob = "0.3.1"
indoc = { version= "2.0.5" } 
itertools = { version = "0.13.0" }
insta = { version = "1.41.1", features = ["filters"] }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-build = "2.0.1"
napi-derive = "2.12.2"
normalize-path = { version = "0.2.1" }
oxc = "0.38.0"
oxc_index = "1.0.0"
oxc_resolver = { version = "2.1.1", features = ["package_json_raw_json_api", "pnp", "yarn_pnp"] }
oxc_semantic = "0.38.0"
regex = "1.11.1"
serde_json = "1.0.133"
tempfile = "3.14.0"
testing = { version = "0.42.0" }
