[package]
name = "wyw_macros"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
cargo = "0.84.0"
cargo_toml = "0.20.5"
convert_case = "0.6.0"
glob = "0.3.1"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
regex = "1.11.0"
semver = "1.0.23"
syn = { version = "2.0.79", features = ["visit-mut"] }
