[package]
name = "wyw_sample_processor"
version = "0.1.0"
publish = false

edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = "symbols"

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
wyw_processor = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }