[package]
name = "wyw_shaker"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
wyw_processor = { workspace = true }
wyw_traverse = { workspace = true }

indoc = { workspace = true }
itertools = { workspace = true }
normalize-path = { workspace = true }
oxc = { workspace = true }
oxc_index = { workspace = true }
oxc_resolver = { workspace = true }
oxc_semantic = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
