[package]
name = "wyw_transform"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
wyw_processor = { workspace = true }
wyw_shaker = { workspace = true }
wyw_traverse = { workspace = true }

glob = { workspace = true }
oxc = { workspace = true }
oxc_resolver = { workspace = true }
oxc_semantic = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
testing = { workspace = true }